# medication-care-thesis

./: .gitignore  DATABASE_SYNC_FOR_AI.md  功能关联分析报告.md
.codex_docs/: project-rules.md  前端开发prompt.md
docs-project/: C-数据与模型方案.md  D-系统架构与技术方案.md  E-接口与数据库设计.md  F-测试与验收计划.md  (+6 more)
flask-project/: .gitignore  README_安装说明.md  install_dependencies.sh  pyproject.toml  test_startup.py
flask-project/app/: main.py
flask-project/app/core/: config.py  exceptions.py  logger.py  tracing.py
flask-project/app/docs/: error-cases.md  examples.md  openapi.yaml
flask-project/app/routers/v1/: detection.py  video_detection.py  video_upload.py
flask-project/app/schemas/: __init__.py  base.py  detection.py
flask-project/app/services/: deepseek_vl_client.py  detector.py  image_loader.py  result_aggregator.py  video_detector.py  video_loader.py
flask-project/app/templates/: test_video_detection.html
flask-project/app/tests/: conftest.py  test_predict_api.py  test_result_aggregator.py
flask-project/app/tests/perf/: test_perf_snippet.py
flask-project/data/labels/: train.cache  val.cache
flask-project/docker/: .dockerignore  Dockerfile  docker-compose.dev.yml
flask-project/docs/: YOLOv8输出解析问题修复.md  模型文件缺失问题解决.md  测试页面使用说明.md  视频上传接口文档.md  视频检测方案.md
flask-project/train-yolov8/: .gitignore  QUICKSTART.md  README.md  requirements.txt
flask-project/train-yolov8/configs/: dataset.yaml  medical-pills.yaml
flask-project/train-yolov8/docs/: 使用Ultralytics数据集.md  训练后操作指南.md
flask-project/train-yolov8/scripts/: download_dataset.py  export_model.py  prepare_dataset.py  train.py
(+200 files in other folders)
